# rules_deno

./: .bazelrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl
.aspect/workflows/: README.md  config.yaml
.aspect/workflows/terraform/: main.tf  workflows.tf
.github/workflows/: ci.bazelrc  ci.yaml  release.yml  release_prep.sh  workspace_snippet.sh
deno/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  toolchain.bzl
deno/private/: BUILD.bazel  binary.bzl  deno_versions.bzl  internal_deps.bzl  toolchains_repo.bzl
docs/: BUILD.bazel  rules.md
e2e/workspace/: BUILD  WORKSPACE  helper.ts  main.ts  util_permissions.ts
e2e/workspace/deno_binary/: BUILD  example_test.sh  main.ts  util_bazel.ts
e2e/workspace/fresh/: BUILD
e2e/workspace/genrule/: BUILD.bazel
examples/deno_binary/: BUILD.bazel  example_test.sh
examples/genrule/: BUILD.bazel  README.md  WORKSPACE
scripts/: filter.jq  mirror_release.sh
tests/: BUILD.bazel  hello_world.js  hello_world.test.sh
tools/buildifier/: BUILD.bazel
tools/format/: BUILD.bazel
tools/gazelle/: BUILD.bazel
