load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load(":deno_versions.bzl", "LATEST_VERSION")

write_file(
    name = "latest_version",
    out = "latest_version.sh",
    content = ["echo \"%s\"" % LATEST_VERSION],
    is_executable = True,
)

bzl_library(
    name = "deno_versions",
    srcs = ["deno_versions.bzl"],
    visibility = ["//deno:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//deno:__subpackages__"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = ["//deno:__subpackages__"],
)
