load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "deno_versions",
    srcs = ["deno_versions.bzl"],
    visibility = ["//deno:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//deno:__subpackages__"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = ["//deno:__subpackages__"],
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//deno:__subpackages__"],
    deps = [":maybe"],
)

bzl_library(
    name = "maybe",
    srcs = ["maybe.bzl"],
    visibility = ["//deno:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
