"""BUILD definition for buildifier
This is in its own package to not trigger eager fetches.
"""

load("@buildifier_prebuilt//:rules.bzl", "buildifier")

package(default_visibility = ["//:__subpackages__"])

buildifier(
    name = "buildifier",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)
