"""BUILD definition for format binary
This is in its own package to not trigger eager fetches.
"""

load("@aspect_rules_lint//format:defs.bzl", "multi_formatter_binary")

package(default_visibility = ["//:__subpackages__"])

sh_binary(
    name = "noop",
    srcs = ["noop.sh"],
)

alias(
    name = "shfmt",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@shfmt_darwin_aarch64//file:shfmt",
        "@bazel_tools//src/conditions:darwin_x86_64": "@shfmt_darwin_x86_64//file:shfmt",
        "@bazel_tools//src/conditions:linux_aarch64": "@shfmt_linux_aarch64//file:shfmt",
        "@bazel_tools//src/conditions:linux_x86_64": "@shfmt_linux_x86_64//file:shfmt",
        "//conditions:default": ":noop",
    }),
)

alias(
    name = "terraform",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@terraform_macos_aarch64//:terraform",
        "@bazel_tools//src/conditions:darwin_x86_64": "@terraform_macos_x86_64//:terraform",
        "@bazel_tools//src/conditions:linux": "@terraform_linux_x86_64//:terraform",
        "//conditions:default": ":noop",
    }),
)

multi_formatter_binary(
    name = "format",
    sh = ":shfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
    terraform = ":terraform",
)
